改进getByteCode方法